--- a/styles.sass
+++ b/styles.sass
@@ -13,11 +13,8 @@ $color-main:#FFA185
     align-items: center
     color: white
     
-
-
 h1
     font-size: 5rem
-
 
 header>nav:first-of-type 
 
@@ -42,6 +39,7 @@ header>div
         display: flex
         justify-content: space-around
         align-items: center 
+
 
 main 
         background-color: $color-main
@@ -85,7 +83,7 @@ footer
  display: flex
  justify-content: space-around
  height: 17vh
- align-items: center
+ align-itens: center
   color: white   
 
 footer>nav:first-of-type
