--- a/styles.sass
+++ b/styles.sass
@@ -29,7 +29,7 @@ ul
     justify-content: space-between
     font-size: 1.5em
 
-li:hover 
+&:hover 
 
     cursor: pointer
     color: $color-main
@@ -73,7 +73,7 @@ h3
     font-size: 2rem
     margin-bottom: 1em
 
-h3:hover 
+&:hover 
     cursor: pointer
     color: white
     transition: 0.3s
