--- a/styles.sass
+++ b/styles.sass
@@ -4,99 +4,6 @@ $color-main:#FFA185
 
 
     
-
-.container
-    background-color: $color-container
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    color: white
-    
-h1
-    font-size: 5rem
-
-header>nav:first-of-type 
-
-            width: 70vh
-
-header>nav:last-of-type
-    width:90vh 
-
-ul 
-    list-style: none
-    display: flex
-    justify-content: space-between
-    font-size: 1.5em
-
-&:hover 
-
-    cursor: pointer
-    color: $color-main
-    transition: 0.2 ease-in
-
-header>div
-        display: flex
-        justify-content: space-around
-        align-items: center 
-
-
-main 
-        background-color: $color-main
-        display: flex
-        flex-direction: column
-        align-items: center
-        width: 100%
-        gap: 30px
-
-main>section 
-    display: flex
-    flex-direction: column
-    gap: 20px
-    width: 100%
-
-main > p 
-
-    font-size: 2rem
-
-.imgs-section 
-    display: flex
-    flex-direction: column
-.linha 
-    display: flex
-    justify-content: space-evenly    
-
-.img-section > img 
-    width: 600px
-
-h3
-    font-size: 2rem
-    margin-bottom: 1em
-
-&:hover 
-    cursor: pointer
-    color: white
-    transition: 0.3s
-
-footer
- background-color:$color-container
- display: flex
- justify-content: space-around
- height: 17vh
- align-itens: center
-  color: white   
-
-footer>nav:first-of-type
- width:20vw
-display:flex
- justify-content: space-between
-    
-
-footer > nav:last-of-type 
-    width: 30vw
-
-
-ion-icon 
-    font-size: 40px
-
- 
+@import './header'
+@import './main'
+@import './footer'
